--- a/TensorFlow+Keras/Readme
+++ b/TensorFlow+Keras/Readme
@@ -1,7 +1,3 @@
 运行环境:
-conda install tensotflow
-conda install keras
-conda install pandas
-conda install numpy
-pip install matplotlib
-pip install scikit-learn
+非Tensorflow2.0中运行环境为tensorflow1.8版本和keras1.x版本。
+从keras默认backend为tensorflow之后，所有keras以及layer方法都将使用tensorflow.keras方式执行
